create listing component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,32 +2,8 @@
 <main>
   <div class="find-whats-popn">
     <ul class="listings">
-      <li>
-        <figure class="listing">
-          <div class="listing-image">
-            <img
-              src="https://img.money.com/2017/05/170515-walt-disney-world-cost.jpeg?crop=0px%2C279px%2C2700px%2C1519px&quality=85"
-              alt="alt descrip">
-          </div>
-          <div class="listing-content">
-            <div class="listing-title">
-              <h2>Disney World</h2>
-              <ul>
-                <li><a class="button" href="#">Directions</a></li>
-                <li><a class="button" href="#">Website</a></li>
-              </ul>
-            </div>
-            <figcaption>
-              <p>Disney world is a badass place to go.</p>
-            </figcaption>
-              <div class="listing-metadata">
-                <p>Hours of Operation: </p>
-                <p>Happening: Until:</p>
-              </div>
-          </div>
-
-        </figure>
-      </li>
+      <app-listing></app-listing>
+      <app-listing></app-listing>
     </ul>
   </div>
 </main>
