add http client module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <main>
   <div class="find-whats-popn">
     <ul class="listings">
-      <app-listing></app-listing>
+      <app-listing [activities]="activityList"></app-listing>
     </ul>
   </div>
 </main>
