--- a/src/app/listing/listing.component.html
+++ b/src/app/listing/listing.component.html
@@ -1,4 +1,4 @@
-<li *ngFor="let listing of listings">
+<li *ngFor="let listing of activities">
   <figure class="listing">
     <div class="listing-image">
       <img
