--- a/src/app/find-whats-popn/find-whats-popn.component.css
+++ b/src/app/find-whats-popn/find-whats-popn.component.css
@@ -3,17 +3,18 @@
   display: flex;
   flex-direction: column;
   margin: 12px;
-  width: fit-content;
+  max-width: 605px;
   min-height: 600px;
   position: relative;
+  border-radius: 12px;
+  background-color: #ffffff;
 }
 
 .listing-content {
-  margin: 2px;
+  margin: 10px;
 }
 
 .listing-title {
-  width: fit-content;
   margin-top: 4px;
 }
 
@@ -40,12 +41,13 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  margin: 2px;
+  margin: 10px;
 }
 
 img {
   max-width: 600px;
   margin: 2px;
+  border-radius:12px;
 }
 
 .button {
