--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+main {
+  display: flex;
+  justify-content: center;
+  background-image: url("./assets/background-texture.png");
+}
