--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="action-container">
+<header>
+  <div class="action-container">
   <nav>
     <a class="button" href="#"><span class="material-symbols-outlined">
         menu
@@ -16,4 +17,5 @@
         </span>Add What's Popn</a>
     </li>
   </ul>
-</div>
+  </div>
+</header>
