--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main>
-  <app-find-whats-popn [activities]="activityList"></app-find-whats-popn>
+  <router-outlet></router-outlet>
 </main>
 
 
