--- a/src/app/find-whats-popn/find-whats-popn.component.html
+++ b/src/app/find-whats-popn/find-whats-popn.component.html
@@ -1,6 +1,6 @@
 <div class="find-whats-popn">
   <ul class="listings">
-    <li *ngFor="let listing of activities">
+    <li *ngFor="let listing of activityList">
       <figure class="listing">
         <div class="listing-image">
           <img src="{{listing.imageUrl}}" alt="alt descrip">
