--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,18 @@
 <header>
   <div class="action-container">
   <nav>
-    <a class="button" href="#"><span class="material-symbols-outlined">
+    <a class="button" [routerLink]=""><span class="material-symbols-outlined">
         menu
       </span></a>
   </nav>
   <ul class="primary-action">
     <li class="action">
-      <a class="button" href="home"><span class="material-symbols-outlined">
+      <a class="button" routerLink="find-whats-popn"><span class="material-symbols-outlined">
           search
         </span>Find What's Popn</a>
     </li>
     <li class="action">
-      <a class="button" href="add-event"><span class="material-symbols-outlined">
+      <a class="button" routerLink="add-whats-popn"><span class="material-symbols-outlined">
           add
         </span>Add What's Popn</a>
     </li>
