--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,4 +16,7 @@
         </span>Add What's Popn</a>
     </li>
   </ul>
+  <div class="favicon">
+    <a routerLink="find-whats-popn">Popn</a>
+  </div>
 </header>
