--- a/src/app/add-whats-popn/add-whats-popn.component.html
+++ b/src/app/add-whats-popn/add-whats-popn.component.html
@@ -1,1 +1,31 @@
-<p>add-whats-popn works!</p>
+<div class="add-whats-popn">
+  <div class="add-whats-popn-form">
+    <form action="add-whats-popn">
+      <label for="name">Activity Name</label><br>
+      <input type="text" id="name" name="name"><br>
+
+      <label for="address">Activity Address</label><br>
+      <input type="text" id="address" name="address"><br>
+
+      <label for="website">Website</label><br>
+      <input type="text" id="website" name="website"><br>
+
+      <label for="description">Description</label><br>
+      <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
+
+      <label for="hour-beginning">Open</label><br>
+      <input type="time" id="hour-beginning" name="hour-beginning"><br>
+
+      <label for="hour-ending">Closed</label><br>
+      <input type="time" id="hour-ending" name="hour-ending"><br>
+
+      <label for="date-beginning">Begins</label><br>
+      <input type="date" id="date-beginning" name="date-beginning"><br>
+
+      <label for="date-ending">Ends</label><br>
+      <input type="date" id="date-ending" name="date-ending"><br>
+
+      <input class="button" type="submit" value="Submit">
+    </form>
+  </div>
+</div>
