fix css for activity-listing to column

--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -1,3 +1,5 @@
+<a href="###">
+<div class="selector">
 <figure class="listing">
   <div class="listing-image">
     <img src="{{imageUrl}}" alt="alt descrip">
@@ -10,11 +12,6 @@
         <li><a class="button" href="#">Website</a></li>
       </ul>
     </div>
-    <div class="listing-description">
-      <figcaption>
-        <p>{{description}}</p>
-      </figcaption>
-    </div>
     <div class="listing-metadata">
       <p><span>Hours: </span>{{hourBeginning}} until {{hourEnding}}</p>
       <p><span>Starts: </span>{{dateBeginning}}</p>
@@ -22,3 +19,5 @@
     </div>
   </div>
 </figure>
+</div>
+</a>
