--- a/src/app/activity-listing/activity-listing.component.css
+++ b/src/app/activity-listing/activity-listing.component.css
@@ -1,13 +1,11 @@
 .listing {
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 500px;
-  height: 550px;
+  width: 800px;
   position: relative;
   border-radius: 12px;
   background-color: #f0f0f0;
   border: 2px solid #a8d1e7;
+  box-sizing: border-box;
 }
 
 .listing-content {
@@ -41,11 +39,11 @@
 }
 
 .listing-metadata {
+  margin-bottom: 10px;
+  font-size: 18px;
   position: absolute;
   bottom: 0;
-  left: 0;
-  margin: 10px;
-  font-size: 20px;
+
 }
 
 .listing-metadata span {
@@ -53,6 +51,7 @@
 }
 
 img {
+  max-width: 325px;
   width: 100%;
   border-radius: 12px;
 }
@@ -64,7 +63,7 @@ img {
   padding: 4px 12px 4px 12px;
   border: 1px solid #333333;
   border-radius: 12px;
-  background-color: hsl(0, 83%, 57%);
+  background-color: hsl(0, 83%, 49%);
   color: #ffffff;
   box-shadow: 0 4px #999;
 }
