refactor html and ts

--- a/src/app/find-whats-popn/find-whats-popn.component.html
+++ b/src/app/find-whats-popn/find-whats-popn.component.html
@@ -1,15 +1,15 @@
 <div class="find-whats-popn">
-  <ul class="listings">
+<p *ngIf="error; else activityListing" class="error">There was a problem getting the product list.</p>
+  <ng-template #activityListing>
+  <ul #activityListing class="listings">
     <li *ngFor="let activity of activityList">
-        <app-activity-listing
-          [imageUrl]="activity.imageUrl"
-          [name]="activity.name"
-          [description]="activity.description"
-          [hourBeginning]="activity.hourBeginning"
-          [hourEnding]="activity.hourEnding"
-          [dateBeginning]="activity.dateBeginning"
-          [dateEnding]="activity.dateEnding"
-></app-activity-listing>
+      <a routerLink="/activity/{{activity.id}}" routerLinkActive="active">
+        <app-activity-listing [imageUrl]="activity.imageUrl" [name]="activity.name" [description]="activity.description"
+          [hourBeginning]="activity.hourBeginning" [hourEnding]="activity.hourEnding"
+          [dateBeginning]="activity.dateBeginning" [dateEnding]="activity.dateEnding">
+        </app-activity-listing>
+      </a>
     </li>
   </ul>
+</ng-template>
 </div>
