--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -1,22 +1,23 @@
-
-  <div class="selector">
-    <figure class="listing">
-      <div class="listing-image">
-        <img src="{{imageUrl}}" alt="alt descrip">
+<a routerLink="/activity/{{id}}" routerLinkActive="active">
+<div class="selector">
+  <figure class="listing">
+    <div class="listing-image">
+      <img src="{{imageUrl}}" alt="alt descrip">
+    </div>
+    <div class="listing-content">
+      <div class="listing-title">
+        <h2>{{name}}</h2>
+        <ul>
+          <li><a class="button" href="#">Directions</a></li>
+          <li><a class="button" href="#">Website</a></li>
+        </ul>
       </div>
-      <div class="listing-content">
-        <div class="listing-title">
-          <h2>{{name}}</h2>
-          <ul>
-            <li><a class="button" href="#">Directions</a></li>
-            <li><a class="button" href="#">Website</a></li>
-          </ul>
-        </div>
-        <div class="listing-metadata">
-          <p><span>Hours: </span>{{hourBeginning}} until {{hourEnding}}</p>
-          <p><span>Starts: </span>{{dateBeginning}}</p>
-          <p><span>Ends: </span> {{dateEnding}}</p>
-        </div>
+      <div class="listing-metadata">
+        <p><span>Hours: </span>{{hourBeginning}} until {{hourEnding}}</p>
+        <p><span>Starts: </span>{{dateBeginning}}</p>
+        <p><span>Ends: </span> {{dateEnding}}</p>
       </div>
-    </figure>
-  </div>
+    </div>
+  </figure>
+</div>
+</a>
