dploy on netlify

--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -8,8 +8,7 @@
       <div class="listing-title">
         <h2>{{name}}</h2>
         <ul>
-          <li><a class="button" href="#">Directions</a></li>
-          <li><a class="button" href="#">Website</a></li>
+          <li>family-friendly, ie, ie</li>
         </ul>
       </div>
       <div class="listing-metadata">
