create image preview for add event

--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -2,7 +2,7 @@
 <div class="selector">
   <figure class="listing">
     <div class="listing-image">
-      <img src="{{imageUrl}}" alt="alt descrip">
+      <img src="{{image}}" alt="alt descrip">
     </div>
     <div class="listing-content">
       <div class="listing-title">
