--- a/src/app/find-whats-popn/find-whats-popn.component.html
+++ b/src/app/find-whats-popn/find-whats-popn.component.html
@@ -5,7 +5,7 @@
     <li *ngFor="let activity of activityList">
         <app-activity-listing
           [id]="activity.id"
-          [imageUrl]="activity.imageUrl"
+          [image]="activity.image"
           [name]="activity.name"
           [description]="activity.description"
           [hourBeginning]="activity.hourBeginning"
