fetch photos from imagekit to display dynamically

--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -2,7 +2,7 @@
 <div class="selector">
   <figure class="listing">
     <div class="listing-image">
-      <img src="{{image}}" alt="alt descrip">
+      <ik-image path="/{{imageUrl}}"></ik-image>
     </div>
     <div class="listing-content">
       <div class="listing-title">
