--- a/src/app/activity-page-view/activity-page-view.component.html
+++ b/src/app/activity-page-view/activity-page-view.component.html
@@ -2,7 +2,7 @@
 <ng-template #activityPageView>
 <figure class="event">
   <div class="event-image">
-    <img src="{{activity.image}}" alt="alt descrip">
+    <ik-image path="/{{activity.imageUrl}}"></ik-image>
   </div>
   <div class="event-content">
     <div class="event-title">
