--- a/src/app/add-whats-popn/add-whats-popn.component.html
+++ b/src/app/add-whats-popn/add-whats-popn.component.html
@@ -2,8 +2,10 @@
   <div class="add-whats-popn-form">
     <form #addActivityForm="ngForm" (ngSubmit)="addActivity(addActivityForm.value)" action="add-whats-popn">
       <label for="image">Upload Image</label><br>
-      <img [src]="url"><br>
-      <input ngModel type="file" (change)="onSelectFile($event)" name="image" accept="image/png, image/gif, image/jpeg" /><br>
+      <img src="{{url}}"><br>
+     <!-- <input ngModel type="file" (change)="onSelectFile($event)" name="image" accept="image/png, image/gif, image/jpeg" /><br>-->
+
+      <ik-upload fileName="{{url}}" [useUniqueFileName]="false" [isPrivateFile]="true" (change)="onSelectFile($event)" name="image" accept="image/png, image/gif, image/jpeg"></ik-upload>
 
       <label for="name">Activity Name</label><br>
       <input ngModel type="text" id="name" name="name" ><br>
