--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <a class="button" routerLink="find-whats-popn" routerLinkActive="active"><span class="material-symbols-outlined">
+    <a class="button" routerLink="home-page" routerLinkActive="active"><span class="material-symbols-outlined">
         menu
       </span></a>
   </nav>
@@ -8,12 +8,12 @@
     <li class="action">
       <a class="button" routerLink="find-whats-popn" routerLinkActive="active"><span class="material-symbols-outlined">
           search
-        </span>Find What's Popn</a>
+        </span>Find Activities</a>
     </li>
     <li class="action">
       <a class="button" routerLink="add-whats-popn" routerLinkActive="active"><span class="material-symbols-outlined">
           add
-        </span>Add What's Popn</a>
+        </span>Add Activities</a>
     </li>
   </ul>
   <div class="favicon">
