--- a/src/app/add-whats-popn/add-whats-popn.component.css
+++ b/src/app/add-whats-popn/add-whats-popn.component.css
@@ -1,9 +1,49 @@
+.add-whats-popn-background {
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+}
+
+.image-description-name {
+  width: 275px;
+}
+
+.image-description-name input {
+  width: 90%;
+}
+
+.secondary-data {
+  width: 275px;
+}
+.secondary-data input {
+  width: 100%;
+}
+
+form input {
+  margin-bottom: 8px;
+}
+
+form textarea {
+  width: 90%;
+}
+
 .add-whats-popn-form {
-margin: 64px 0;
-  border-radius: 12px;
+  margin: 64px 0;
+  border-radius: 6px;
   padding: 24px;
-  background-color: #c1c8e4;
-position: relative;
+  background-color: hsl(211, 100%, 97%);
+  border: 3px solid hsl(211, 50%, 85%);
+  position: relative;
+  width: 600px;
+}
+
+.hours-dates {
+  display: flex;
+  justify-content: space-between;
 }
 
 .button {
@@ -16,25 +56,25 @@ position: relative;
   font-weight: 700;
   text-decoration: none;
   padding: 4px 12px 4px 12px;
-  border: 1px solid #333333;
-  border-radius: 12px;
-  background-color: hsl(0, 83%, 57%);
-  color: #ffffff;
-  box-shadow: 0 4px #999;
+  border-radius: 6px;
+  border: none;
+  background-color: hsl(0, 99%, 64%);
+  color: hsl(211, 100%, 97%);
 }
 
 .button:hover {
-  background-color: hsl(0, 83%, 40%);
+  background-color: hsl(0, 99%, 54%);
+  cursor: pointer;
 }
 
 .button:active {
-  background-color: hsl(0, 83%, 40%);
-  box-shadow: 0 2px #666;
+  background-color: hsl(0, 99%, 54%);
   transform: translateY(4px);
 }
 img {
-    width: 250px;
-    height: 175px;
-    object-fit: cover;
-    border-radius: 12px;
+  width: 250px;
+  height: 175px;
+  object-fit: cover;
+  border-radius: 6px;
+  border: 2px solid hsl(211, 50%, 85%);
 }
