--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   min-height: 100vh;
   background-attachment: fixed;
-  margin-top: 64px;
+  margin-left: 18px;
+  margin-right: 18px;
 }
