--- a/src/app/find-whats-popn/find-whats-popn.component.css
+++ b/src/app/find-whats-popn/find-whats-popn.component.css
@@ -1,9 +1,23 @@
+.centered {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.find-whats-popn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 64px;
+  border-radius: 6px;
+  padding: 3px;
+}
+
 .listings {
-  margin: 12px;
   text-align: center;
   max-width: 1280px;
 }
 
-.listings li {
+.listings li + li {
   text-align: left;
+  margin-top: 6px;
 }
