--- a/src/app/find-whats-popn/find-whats-popn.component.html
+++ b/src/app/find-whats-popn/find-whats-popn.component.html
@@ -1,3 +1,4 @@
+<div class="centered">
 <div class="find-whats-popn">
 <p *ngIf="error; else activityListing" class="error">There was a problem getting the product list.</p>
   <ng-template #activityListing>
@@ -17,4 +18,5 @@
     </li>
   </ul>
 </ng-template>
+</div>
 </div>
